--- a/index.html
+++ b/index.html
@@ -895,13 +895,13 @@
                         <a href="#home" class="explore-btn bg-gradient-to-r from-amber-800 to-amber-950 hover:from-amber-900 hover:to-amber-900 text-white px-6 py-3 rounded-lg font-medium transition duration-300 shadow-lg inline-flex items-center justify-center">
                             <i class="fas fa-home mr-2"></i> Return Home
                         </a>
-                        <a href="#introduction" class="explore-btn bg-gradient-to-r from-amber-600 to-amber-800 hover:from-amber-700 hover:to-amber-900 text-white px-6 py-3 rounded-lg font-medium transition duration-300 shadow-lg inline-flex items-center justify-center">
-                            <i class="fas fa-redo mr-2"></i> Start Again
+                        <a href="galerie.html" class="explore-btn bg-gradient-to-r from-amber-600 to-amber-800 hover:from-amber-700 hover:to-amber-900 text-white px-6 py-3 rounded-lg font-medium transition duration-300 shadow-lg inline-flex items-center justify-center">
+                            <i class="fas fa-redo mr-2"></i> Galerie
                         </a>
                     </div>
                     <div class="mt-12 text-amber-100 text-sm">
-                        <p>An interactive experience by Serban David & Udrea Yannis Andrei</p>
-                        <p class="mt-2">GeoRelief Explorer Project © 2023</p>
+                        <p>Un Proiect Interactiv de Serban David & Udrea Yannis Andrei</p>
+                        <p class="mt-2">GeoRelief Explorer Project © 2025</p>
                     </div>
                 </div>
             </div>
