--- a/index.html
+++ b/index.html
@@ -605,11 +605,7 @@
                         </div>
                     </div>
                     
-                    <div class="text-center">
-                        <a href="#fault-mountains" class="explore-btn bg-gradient-to-r from-amber-700 to-amber-900 hover:from-amber-800 hover:to-amber-950 text-white px-6 py-2 rounded transition shadow inline-flex items-center">
-                            <i class="fas fa-chevron-right mr-2"></i> Discover Fault-Block Mountains
-                        </a>
-                    </div>
+                    <a href="">Prezentare Indetaliata</a>
                 </div>
             </div>
         </section>
@@ -1044,25 +1040,25 @@
                 'himalayasCard': {
                     title: 'Relieful pe structuri tubulare(orizontale)',
                     content: "Relieful structural se formează pe diferite structuri geologice, fiecare având caracteristici specifice:\n\n- Relief pe structuri tabulare (orizontale): straturi aproape orizontale, relieful este plat sau domol, cu văi largi și simetrice.\n  Exemplu: podișuri tabulare.\n\n- Relief pe structuri monoclinale: straturi înclinate într-o singură direcție, formează cuesta cu față abruptă și față domoală.\n  Exemple: cuestele din zone carstice.\n\n- Relief pe structuri cutate: straturi ondulate, cu anticlinale (culmi) și sinclinale (văi).\n  Exemplu: Munții Apuseni.\n\n- Relief pe structuri faliate: scoarța fracturată cu blocuri ridicate (horsturi) și coborâte (grabene).\n  Exemple: Depresiunea Brașov (graben) înconjurată de munți horsturi.",
-                    images: ['https://via.placeholder.com/300x200?text=Himalaya+1', 'https://via.placeholder.com/300x200?text=Himalaya+2', 'https://via.placeholder.com/300x200?text=Himalaya+3'],
+                    images: ["image copy 10.png" , "image copy 11.png"],
                     action: 'I'
                 },
                 'alpsCard': {
-                    title: 'Alps',
-                    content: "**Relieful pe structuri monoclinale (homoclinale):**\n\n* **Definiție științifică:** Acest tip de relief se formează pe strate de roci sedimentare care sunt înclinate ușor (în general sub 10-15 grade) într-o singură direcție, ca urmare a unor mișcări tectonice epirogenetice sau a influenței unei structuri majore (dom, cută largă). Eroziunea diferențială (acțiunea selectivă a apei și a altor agenți externi asupra rocilor cu duritate diferită) este procesul dominant, sculptând forme asimetrice caracteristice.\n* **Forme specifice:** Principala formă este **cuesta**, un deal sau podiș asimetric cu o pantă lină numită **spinare** (suprafața structurală, care urmărește înclinarea stratului dur) și o pantă abruptă numită **frunte** (abruptul de eroziune, orientat în sens opus înclinării stratelor). Între frunțile cuestelor se dezvoltă **depresiuni subsecvente**. Când înclinarea stratelor devine mai mare (peste 40-45°), se formează **hogback**-uri (creste mai simetrice).\n* **Exemple reale (pentru imagini):**\n    * **Podișul Someșan (România):** Cuestele dezvoltate la contactul cu Depresiunea Colinară a Transilvaniei (ex: Dealurile Clujului, Cuesta Someșană).\n    * **Bazinul Parisului (Franța):** O structură clasică de bazin sedimentar cu numeroase cueste concentrice (ex: Cuesta Île-de-France).\n    * **Escarpamentul Niagara (SUA/Canada):** O cuestă proeminentă, faimoasă pentru Cascada Niagara, formată pe roci siluriene rezistente.",
-                    images: ['https://via.placeholder.com/300x200?text=Alps+1', 'https://via.placeholder.com/300x200?text=Alps+2'],
+                    title: 'Relieful format pe structuri monoclinale',
+                    content: "Relieful dezvoltat pe structuri monoclinale este caracterizat de straturi de roci înclinate într-o singură direcție, cu unghiuri variabile de înclinare. Această configurație structurală conduce la formarea unor reliefuri asimetrice, influențate de alternanța stratelor dure și moi și de acțiunea agenților externi. Formele de relief tipice includ:\n\n- **Cueste**: interfluvii asimetrice formate prin eroziunea diferențială a stratelor înclinate, având un versant abrupt (fruntea cuestei) și unul domol (reversul cuestei).\n\n- **Hogback-uri**: interfluvii relativ simetrice, unde stratele au o înclinare mare (peste 60°), iar suprafața structurală și fruntea au pante similare.\n\n- **Văi structurale**: formate în funcție de direcția de înclinare a stratelor, pot fi:\n  - **Consecvente**: urmează direcția de înclinare a stratelor.\n  - **Subsecvente**: se dezvoltă perpendicular pe direcția de înclinare, la contactul dintre strate dure și moi.\n  - **Obsecvente**: opuse direcției de înclinare a stratelor.",
+                    images: ["image copy 12.png", "image copy 13.png", "image copy 14.png"],
                     action: 'II'
                 },
                 'appalachiansCard': {
-                    title: 'Appalachians',
-                    content: 'The Appalachian Mountains are much older than the Himalayas, forming about 480 million years ago. They were once as tall as the Alps but have been significantly eroded over time. These mountains are rich in coal deposits.',
-                    images: ['https://via.placeholder.com/300x200?text=Appalachians+1', 'https://via.placeholder.com/300x200?text=Appalachians+2'],
+                    title: 'Relieful dezvoltate pe structuri cutate',
+                    content: "Relieful dezvoltat pe structuri cutate apare în zonele unde stratele de roci au fost deformate prin procese tectonice, formând pliuri. Principalele forme de relief asociate acestor structuri sunt:\n\n- **Anticlinale**: pliuri cu partea convexă în sus, care pot forma culmi montane.\n\n- **Sinclinale**: pliuri cu partea concavă în sus, adesea ocupate de văi.\n\n- **Butoniere**: excavațiuni alungite formate prin eroziunea anticlinalelor, care pot duce la inversiuni de relief, unde fostele culmi devin văi și invers.\n\nAceste forme de relief sunt influențate de eroziune și pot suferi inversiuni de relief în timp.",
+                    images: ["image copy 15.png", "image copy 16.png"],
                     action: 'III'
                 },
                 'newCard': {
-                    title: 'Appalachians',
-                    content: 'The Appalachian Mountains are much older than the Himalayas, forming about 480 million years ago. They were once as tall as the Alps but have been significantly eroded over time. These mountains are rich in coal deposits.',
-                    images: ['https://via.placeholder.com/300x200?text=Appalachians+1', 'https://via.placeholder.com/300x200?text=Appalachians+2'],
+                    title: 'Relieful dezvoltate pe structuri faliate',
+                    content: "Relieful dezvoltat pe structuri faliate se formează în zonele unde crusta terestră a fost fracturată și blocurile de roci au fost deplasate vertical sau orizontal. Formele de relief caracteristice includ:\n\n- **Horsturi**: blocuri de roci ridicate între două falii, formând masive muntoase.\n\n- **Grabene**: blocuri de roci coborâte între două falii, formând depresiuni tectonice.\n\n- **Abrupturi de falie**: versanți abrupți care marchează linia de falie, adesea fragmentați de eroziune în fațete triunghiulare.\n\nAceste forme de relief sunt influențate de activitatea tectonică și de eroziune, rezultând în peisaje variate și adesea spectaculoase.",
+                    images: ["image copy 17.png"],
                     action: 'IV'
                 },
                 
